okay2-spark: SparkInterop and SparkBulk ported to Scala 2.13, natively
Ports okay-spark's SparkInterop.aggregate/aggregateByKey/toSpark and
the whole SparkBulk seam (Bulk[Rows] over an RDD, native distributed
sortByKey through Tables.Heap/State) to okay2, no cross-version shim:
this build already compiles as Spark's own Scala 2.13. Two real
defects found running against actual Spark: aggregateByKey's shuffle
needs the same --add-opens set the Scala 3 sparkTestSettings already
names (Kryo reflecting into java.nio.HeapByteBuffer under JDK 17+);
csv's column-pruning closure captured the whole SparkBulk instance
(including its SparkSession) via an instance-method call, refused as
Task not serializable -- moved to a companion-object function holding
no per-instance state. SparkSchema (needs Columns/Schema/Json) waits
no longer: okay2-codec landed while this was in flight.